# SumCamp-Drone-code

./: CMakeLists.txt  README.md  log.txt  package.xml
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: rmg2.pc
devel/share/rmg2/cmake/: rmg2-msg-extras.cmake  rmg2-msg-paths.cmake  rmg2Config.cmake
launch/: pidTest.launch  transfer.launch
msg/: rmg2_control.msg  rmg2_pid.msg  rmg2_position.msg
src/: control_core_drone.cpp  drone_control_core.cpp  drone_logic_core.cpp  drone_serial.cpp  hand_test.cpp  kb_controller.cpp  log.txt  logic_core_drone.cpp  rmg2_pid_controller.cpp  rmg2_pid_controller.h  transpos_drone.cpp
