<?xml version="1.0"?>
<package>
  <name>rmg2</name>
  <version>0.0.0</version>
  <description>The rmg2 package</description>

  <maintainer email="1012116832@qq.com">ssj</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dji_sdk</build_depend>
  <build_depend>massage_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>apriltags</build_depend>

  <run_depend>apriltags</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dji_sdk</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
